Agregando anatomia basica del BODY

--- a/01_Index-HEAD/index.html
+++ b/01_Index-HEAD/index.html
@@ -14,7 +14,27 @@
                                             <!--Vincular archivos al sitio, rel: Descripcion-->
         <link rel="stylesheet" href="./css/style.css">
     </head>
+                                        <!--2 tipos de etiquetas-->
+                                            <!--Contenedoras: Contienen mas etiquetas dentro, ayudan con la estructura-->
+                                            <!--De Contenido: Tienen el texto, imagenes, videos, cosas renderizables-->
     <body>
-     
+        <header>                        <!--Seccion superior del sitio-->               
+            <nav></nav>                 <!--Barra de navegacion-->
+        </header>
+        <main>                          <!--Contenido central de la pagina-->
+            <section>                       <!--Agregar secciones/apartados-->
+                <article>                       <!--Articulos dentro de una seccion-->
+
+                </article>
+            </section>
+                                        <!--Existen dos etiquetas para crear listas-->
+            <ul>                            <!--Lista desordenada: Muestra un punto-->
+                <li></li>                       <!--Agregar un articulo a la lista-->
+            </ul>
+            <ol></ol>                       <!--Lista ordenada: Muestra numeros-->
+        </main>
+        <footer>                        <!--Seccion final del sitio-->
+
+        </footer>
     </body>
 </html>
