3 Formas de agregar estilos

--- a/01_Index-HEAD/agregarVideo/index.html
+++ b/01_Index-HEAD/agregarVideo/index.html
@@ -12,7 +12,7 @@
                     <!--control permite reproducir/parar, adelantar, de lo contrario parece una imagen-->
                     <!--preload permite cargar previamente el archivo conforme se carga la pagina-->
                 <!--Mala practica semanticamente hablando de agregar un video-->
-                    <!-- <video src="https://www.youtube.com/watch?v=B4LvDiIi128" controls preload="auto"></video> -->
+                    <video src="https://www.youtube.com/watch?v=B4LvDiIi128" controls preload="auto"></video>
                 <!--Buena practica semanticamente hablando-->
                 <video controls preload="auto">
                     <source src="https://www.youtube.com/watch?v=B4LvDiIi128" /> 
