3 Formas de agregar estilos desde css

--- a/05_CSS/index.html
+++ b/05_CSS/index.html
@@ -3,22 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Forma 1 de agregar CSS: Más comun y sugerida-->
     <link rel="stylesheet" href="./style.css">
-    <!--Forma 2 de agregar CSS: etiqueta <style/>: Se recomienda no ser usada, salvo pequeños estilos-->
-    <style>
-        p{
-            color:blueviolet;
-        }
-    </style>
     <title>CSS</title>
 </head>
 <body>
     <main>
         <section>
-            <!--Forma 3 de agregar CSS: dentro de una etiqueta como un atributo, no recomendada-->
-            <p style="color: RED;">SOY UN TEXTO</p>
-            <p>SOY UN TEXTO</p>
+            <p class="clase">Texto modificado usando class</p>
+            <p id="ide">Texto modificado con id</p>
         </section>
     </main>
 </body>
