--- a/05_CSS/claseEspecificidad/index.html
+++ b/05_CSS/claseEspecificidad/index.html
@@ -13,7 +13,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Cursos</a></li>
                     <li><a href="#">Instructores</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="#" style="background-color: chartreuse;" class="blog">Blog</a></li>
                 </ul>
             </nav>
         </header>
